--- a/README.Rmd
+++ b/README.Rmd
@@ -3,6 +3,9 @@ title: "Prácticas de aula 4 (PA04). Formas elementales en el mapa topográfico,
 author: "El Tali"
 date: "`r format(Sys.Date(), '%Y-%m-%d')`"
 output:
+  # bookdown::github_document2:
+  #   number_sections: false
+  #   fig_caption: yes
   bookdown::html_document2:
     number_sections: false
     code_folding: hide
@@ -24,6 +27,25 @@ knitr::opts_chunk$set(
   out.width = '100%',
   fig.retina = 4)
 ```
+
+```{r, include=F}
+output_format <- knitr::opts_knit$get("rmarkdown.pandoc.to")
+repo_url <- system("git config --get remote.origin.url", intern = TRUE)
+repo_name <- sub(".git$", "", basename(repo_url))
+org_name <- basename(dirname(repo_url))
+rmd_filename <- tools::file_path_sans_ext(basename(knitr::current_input()))
+github_pages_url <- paste0("https://", org_name, ".github.io/", repo_name, "/", rmd_filename, ".html")
+```
+
+```{r, results='asis', echo=F}
+if (grepl('gfm', output_format)) {
+  cat('Versión HTML (quizá más legible), [aquí](', github_pages_url, ')\n', sep = '')
+} else if (output_format == 'latex') {
+  cat('Versión HTML (quizá más legible), [aquí](', github_pages_url, ')\n', sep = '')
+}
+```
+
+
 
 # Fecha/hora de entrega
 
